﻿# Changelog
Comprehensive changes can be found in Git change history:
	https://github.com/mkahvi/taskmaster/commits/master

## [0.11...]
### 2018-11-25
	Added: Show CPU sample frequency in power configuration. This is to help understand the delays involved.
	Fixed: Show Inaction was showing some debug information even when Process debug was not enabled as well.
### 2018-11-20
	Added: Behaviour and Restore Mode configuration to power configuration UI
	Changed: 'Power auto-adjust configuration' is now just 'Power configuration'
	Fixed: 'Free memory for' option did not actually work properly if you selected anything besides the empty option.
### 2018-11-17
	Internal: A lot of changes that had been left for later. At most fixed some obscure bugs.
	Fixed: Path visibility option was not actually read from Watchlist.ini
### 2018-11-16
	Fixed: Wrong power mode selected in watchlist edit window.
	Changed: Power mode changes don't show for watchlist modifications to avoid spammyness from background powerdown setting.
	Added: Background affinity and priority control to watchlist edit window. Formerly only available via direct .ini editing.
	Added: Audio control to watchlist edit window. Formerly ony available via direct .ini editing.
	Changed: Watchlist edit window is now a little more logically sorted.
	FIXED: Components are now saved! This was broken not too long ago. Some other configuration savings were also enforced just in case.
	Changed: Watchlist edit window now has some features disabled if associated component is disabled.
### 2018-11-15
	Internal: Removed as much as possible of Serilog's formatted string usage. This should fix large number of output related bugs.
### 2018-11-13
	Added: 'Background affinity' added to complement 'Background priority' for foreground only option.
	Changed: Background priority application and restoration, it is now smarter about it.
	Internal: Massive refactoring, things may have broken.
### 2018-11-12